--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -88,6 +88,9 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name="IconProfileSmallFill"></IconWrapper>
                             <IconWrapper name="IconCheckSmallFill"></IconWrapper>
                             <IconWrapper name="IconCloseSmallLine"></IconWrapper>
+                            <IconWrapper name="IconSettingSmallFill"></IconWrapper>
+                            <IconWrapper name="IconQuestionMarkSmallFill"></IconWrapper>
+                            <IconWrapper name="IconFileSmallLine"></IconWrapper>
                         </div>
                     </div>
                     <!--medium-->
@@ -126,6 +129,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconEduMediumLine></IconWrapper>
                             <IconWrapper name=IconCouponMediumLine></IconWrapper>
                             <IconWrapper name=IconRevertMediumLine></IconWrapper>
+                            <IconWrapper name=IconDownloadMediumLine></IconWrapper>
                         </div>
                     </div>
                     <!--large-->
