--- a/stories/DataDisplay/Tabs.stories.mdx
+++ b/stories/DataDisplay/Tabs.stories.mdx
@@ -9,13 +9,6 @@ import Chip from "@/src/Components/DataDisplay/Chip";
     title="Data Display/Tabs"
     component={ Tabs }
     argTypes={{
-        items: {
-            description: "탭 아이템<br/>Array",
-            defaultValue: ['Tab1', 'Tab2', 'Tab3', 'Tab4'],
-            control: {
-                type: "array",
-            },
-        },
         type: {
             description: "Swiper 사용 여부<br/>String",
             control: {
@@ -29,8 +22,18 @@ import Chip from "@/src/Components/DataDisplay/Chip";
 export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { Tabs, Button },
+    data() {
+        return {
+            selectedNo: 2,
+        }
+    },
+    methods: {
+        handleChangeTabIndex(index) {
+            this.selectedNo = index
+        }
+    },
     template:
-      `<Tabs :type="type">
+      `<Tabs :type="type" :tabIndex="selectedNo" @changeTabIndex="handleChangeTabIndex">
           <template v-for="(item, index) in 5" :slot="'item' + index">
                 <Button>
                   Tab{{ item }}
@@ -55,9 +58,27 @@ export const Default = (args, { argTypes }) => ({
 <Canvas>
     <Story name="All" height="100px">
         {{
+            data() {
+                return {
+                    selectedNo1: 0,
+                    selectedNo2: 0,
+                    selectedNo3: 0,
+                }
+            },
+            methods: {
+                handleChangeTabIndex1(index) {
+                    this.selectedNo1 = index;
+                },
+                handleChangeTabIndex2(index) {
+                    this.selectedNo2 = index;
+                },
+                handleChangeTabIndex3(index) {
+                    this.selectedNo3 = index;
+                },
+            },
             template: `
             <div>
-                <Tabs>
+                <Tabs :tabIndex="selectedNo1"  @changeTabIndex="handleChangeTabIndex1">
                     <template v-for="(item, index) in 5" :slot="'item' + index">
                             <Button>
                                 Tab{{ item }}
@@ -66,18 +87,16 @@ export const Default = (args, { argTypes }) => ({
                 </Tabs>
                 <Typography type="caption1">basic type</Typography>
                 <br/>
-                <div>
-                    <Tabs type="swiper">
-                        <template v-for="(item, index) in 5" :slot="'item' + index">
-                                <Button>
-                                    Tab{{ item }}
-                                </Button>
-                        </template>
-                    </Tabs>
-                </div>
+                <Tabs type="swiper" :tabIndex="selectedNo2" @changeTabIndex="handleChangeTabIndex2">
+                    <template v-for="(item, index) in 5" :slot="'item' + index">
+                            <Button>
+                                Tab{{ item }}
+                            </Button>
+                    </template>
+                </Tabs>
                 <Typography type="caption1">swiper type</Typography>
-                        <br/>
-               <Tabs>
+                <br/>
+                <Tabs :tabIndex="selectedNo3" @changeTabIndex="handleChangeTabIndex3">
                    <template v-for="(item, index) in 5" :slot="'item' + index">
                            <Button style="position: relative">
                                Tab{{ item }}
@@ -87,12 +106,9 @@ export const Default = (args, { argTypes }) => ({
                </Tabs>
             <br/>
             <Typography type="caption1">탭에 여러 컴포넌트가 들어가는 경우</Typography>
-            <div>
-                <Tabs type="swiper" :items="moreItems"/>
-            </div>
             </div>
             `,
-            components: { Tabs, Button, Chip, Badge },
+            components: { Tabs, Typography, Button, Chip, Badge },
         }}
     </Story>
 </Canvas>
