[change] badge type normal -> inline

--- a/stories/DataDisplay/Badge.stories.mdx
+++ b/stories/DataDisplay/Badge.stories.mdx
@@ -242,7 +242,7 @@ export const Default = (args, { argTypes }) => ({
   </Story>
 </Canvas>
 
-### Type Normal
+### Type Inline
 대상에 붙어있지 않고 독립적인 컴포넌트로 쓰일 때 사용
 
 <Canvas>
@@ -255,7 +255,7 @@ export const Default = (args, { argTypes }) => ({
                           <Badge
                             text="1"
                             color="error"
-                          type="normal"
+                          type="inline"
                         >
                         </Badge>
                     </div>
