--- a/stories/DataDisplay/Tabs.stories.mdx
+++ b/stories/DataDisplay/Tabs.stories.mdx
@@ -114,7 +114,7 @@ export const Default = (args, { argTypes }) => ({
                            <Button style="position: relative">
                                Tab{{ item }}
                            </Button>
-                          <Badge type="normal" text="1" :offsetX="20" :offsetY="10"/>
+                          <Badge type="inline" text="1" :offsetX="20" :offsetY="10"/>
                    </template>
                </Tabs>
                <Tabs :tabIndex="selectedNo4" type="swiper" @changeTabIndex="handleChangeTabIndex4">
@@ -122,7 +122,7 @@ export const Default = (args, { argTypes }) => ({
                           <Button style="position: relative">
                               Tab{{ item }}
                           </Button>
-                         <Badge type="normal" text="1" :offsetX="20" :offsetY="10"/>
+                         <Badge type="inline" text="1" :offsetX="20" :offsetY="10"/>
                   </template>
               </Tabs>
             <br/>
@@ -157,7 +157,7 @@ export const Default = (args, { argTypes }) => ({
                                 {{ item }}
                             </Button>
                             <template v-if="item === '새 댓글'">
-                                <Badge text="3" color="error" type="normal"/>
+                                <Badge text="3" color="error" type="inline"/>
                             </template>
                     </template>
                 </Tabs>
