--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -54,10 +54,10 @@ import Select from "@/src/Components/DataEntry/Select";
                 type: "boolean",
             },
         },
-        maxWidth: {
-            description: "모달 최대 width",
+        full: {
+            description: "모달 width의 크기",
             control: {
-                type: "text",
+                type: "boolean",
             },
         },
         disabled: {
@@ -97,7 +97,7 @@ export const Default = (args, { argTypes }) => ({
                 :loading="loading"
                 :success-message="successMessage"
                 :show-action-button="showActionButton"
-                :max-width="maxWidth"
+                :full="full"
                 :scroll="scroll"
                 :disabled="disabled"
             >
