[change] 변경사항에 따른 스토리 수정

--- a/stories/Card/Card.stories.mdx
+++ b/stories/Card/Card.stories.mdx
@@ -10,6 +10,7 @@ import StyleCol from "@/src/Components/Layout/StyleCol";
   argTypes={{
     backgroundImage: {
       description: "카드 배경<br/>`String`",
+      defaultValue: "https://cdn.comento.kr/edu/title_OUZVTI7e2c.jpg",
       table: {
         type: {
           summary: null,
@@ -21,6 +22,7 @@ import StyleCol from "@/src/Components/Layout/StyleCol";
     },
     category: {
       description: "캠프 카테고리<br/>`String`",
+      defaultValue: "category",
       table: {
         type: {
           summary: null,
@@ -32,6 +34,7 @@ import StyleCol from "@/src/Components/Layout/StyleCol";
     },
     title: {
       description: "캠프 제목<br/>`String`",
+      defaultValue: "title",
       table: {
         type: {
           summary: null,
@@ -43,6 +46,7 @@ import StyleCol from "@/src/Components/Layout/StyleCol";
     },
     captionLeft: {
       description: "좌측 캡션<br/>`String`",
+      defaultValue: "captionLeft",
       table: {
         type: {
           summary: null,
@@ -54,6 +58,7 @@ import StyleCol from "@/src/Components/Layout/StyleCol";
     },
     captionRight: {
       description: "우측 캡션<br/>`String`",
+      defaultValue: "captionRight",
       table: {
         type: {
           summary: null,
@@ -101,17 +106,22 @@ export const Default = (args, { argTypes }) => ({
 <Canvas>
   <Story name="All">
     {{
+      data() {
+        return {
+            exampleBackgroundImage: "https://cdn.comento.kr/edu/title_OUZVTI7e2c.jpg",
+        }
+      },
       template: `
                 <Grid>
                     <Row>
                         <StyleCol :col-lg="4">
-                            <Card/>
+                            <Card :backgroundImage="exampleBackgroundImage" category="category" title="title" captionLeft="captionLeft" captionRight="captionRight"/>
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <Card/>
+                            <Card :backgroundImage="exampleBackgroundImage" category="category" title="title" captionLeft="captionLeft" captionRight="captionRight"/>
                         </StyleCol>
                         <StyleCol :col-lg="4">
-                            <Card/>
+                            <Card :backgroundImage="exampleBackgroundImage" category="category" title="title" captionLeft="captionLeft" captionRight="captionRight"/>
                         </StyleCol>
                     </Row>
                 </Grid>
