[add] icon-check-xlarge-fill

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -182,6 +182,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconCelebrateXLargeLine></IconWrapper>
                             <IconWrapper name=IconAnswerXLargeLine></IconWrapper>
                             <IconWrapper name=IconMegaphoneXLargeLine></IconWrapper>
+                            <IconWrapper name=IconCheckXLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--2x-large-->
